[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm"]

[project]
authors = [
  {name = "Jevin Sweval", email = "jevinsweval@gmail.com"}
]
classifiers = [
  "Programming Language :: Python :: 3"
]
dependencies = [
  "attrs",
  "construct",
  "construct-typing",
  "nativetypes"
]
description = "Utilities for NXP iMX SoCs"
dynamic = ["version"]
keywords = ["imx", "nxp", "nxp-imx"]
license = {text = "BSD-2-Clause"}
name = "jev-imx-utils"
readme = {file = 'README.md', content-type = 'text/markdown'}
requires-python = ">=3.8"

[project.optional-dependencies]
optional-dependencies = [
  "pre-commit"
]

[project.scripts]
jev-imx-util = "jev_imx_utils.tools.jev_imx_util:main"

[project.urls]
Repository = "https://github.com/jevinskie/jev-imx-utils"

[tool.setuptools]
zip-safe = true

[tool.setuptools.dynamic]
version = {attr = "jev_imx_utils.__version__"}
